.metadata/.plugins/org.eclipse.cdt.ui/BMP180_F4DISC_test.build.log
10:32:48 **** Build of configuration Debug for project BMP180_F4DISC_test ****
make -j1 all 
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
../Core/Src/sysmem.c:38:1: error: unknown type name 'caddr_t'
   38 | caddr_t _sbrk(int incr)
      | ^~~~~~~
../Core/Src/sysmem.c: In function '_sbrk':
../Core/Src/sysmem.c:51:25: error: 'caddr_t' undeclared (first use in this function)
   51 |                 return (caddr_t) -1;
      |                         ^~~~~~~
../Core/Src/sysmem.c:51:25: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/sysmem.c:56:25: error: expected ';' before 'prev_heap_end'
   56 |         return (caddr_t) prev_heap_end;
      |                         ^~~~~~~~~~~~~~
      |                         ;
../Core/Src/sysmem.c:42:15: warning: variable 'prev_heap_end' set but not used [-Wunused-but-set-variable]
   42 |         char *prev_heap_end;
      |               ^~~~~~~~~~~~~
../Core/Src/sysmem.c:57:1: warning: control reaches end of non-void function [-Wreturn-type]
   57 | }
      | ^
make: *** [Core/Src/subdir.mk:43: Core/Src/sysmem.o] Error 1
"make -j1 all" terminated with exit code 2. Build might be incomplete.

10:32:49 Build Failed. 4 errors, 2 warnings. (took 736ms)

